[project]
name = "MolRot"
version = "0.0.1"
authors = [
{name = "Martin Berglund", email = "j.martin.berglund@gmail.com"},
]
description = "A tomography and interferometry library for diatomic molecular ions"
readme = "README.md"
requires-python = ""
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project-urls]
Homepage = "" #"https://github.com/pypa/sampleproject"
Issues = "" # "https://github.com/pypa/sampleproject/issues"
#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
